fix: Enable language preview features using spring boot maven plugin